--- a/cleanup.yml
+++ b/cleanup.yml
@@ -11,6 +11,7 @@
     - name: destroy the global forwarding rule
       gcp_compute_global_forwarding_rule:
           name: "globalfowardingrule"
+          target:
           project: "{{ project }}"
           auth_kind: "{{ auth_kind }}"
           service_account_file: "{{ credentials_file }}"
@@ -18,7 +19,7 @@
     - name: destroy the target http proxy
       gcp_compute_target_http_proxy:
           name: "targethttpproxy-globalforwardingrule"
-          url_map: ''
+          url_map:
           project: "{{ project }}"
           auth_kind: "{{ auth_kind }}"
           service_account_file: "{{ credentials_file }}"
@@ -26,7 +27,7 @@
     - name: destroy the url map
       gcp_compute_url_map:
           name: "urlmap-globalforwardingrule"
-          default_service: ''
+          default_service:
           project: "{{ project }}"
           auth_kind: "{{ auth_kind }}"
           service_account_file: "{{ credentials_file }}"
@@ -34,6 +35,7 @@
     - name: destroy the url map
       gcp_compute_backend_service:
           name: "backendservice-globalforwardingrule"
+          health_checks:
           project: "{{ project }}"
           auth_kind: "{{ auth_kind }}"
           service_account_file: "{{ credentials_file }}"
@@ -81,6 +83,13 @@
       gcp_compute_address:
         name: "{{ name_zoneb }}-ip"
         region: "{{ region }}"
+        project: "{{ project }}"
+        service_account_file: "{{ credentials_file }}"
+        auth_kind: "{{ auth_kind }}"
+        state: absent
+    - name: Delete the global address
+      gcp_compute_global_address:
+        name: "globaladdress-globalforwardingrule1"
         project: "{{ project }}"
         service_account_file: "{{ credentials_file }}"
         auth_kind: "{{ auth_kind }}"
